--- a/default.css
+++ b/default.css
@@ -1,20 +1,3 @@
-/* :root {
-  --mainColor: #eaeaea;
-  --secondaryColor: #fff;
-
-  --borderColor: #c1c1c1;
-
-  --mainText: black;
-  --secondaryText: #4b5156;
-
-  --themeDotBorder: #24292e;
-
-  --previewBg: rgb(251, 249, 243, 0.8);
-  --previewShadow: #f0ead6;
-
-  --buttonColor: black;
-} */
-
 :root {
   --mainColor: #15202b;
   --secondaryColor: #192734;
@@ -108,7 +91,6 @@ h6 {
 
 .main-container {
   width: 1200px;
-  /* height: auto; */
   margin: 0 auto;
 }
 
@@ -279,10 +261,8 @@ h6 {
 
 .about-wrapper {
   display: grid;
-  /* grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); */
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   padding-bottom: 50px;
-  /* padding-top: 50px; */
   padding-top: 100px;
   gap: 100px;
 }
@@ -294,19 +274,11 @@ h6 {
 }
 
 .social-links {
-  /* display: grid; */
-  /* align-content: center; */
   text-align: center;
-  /* justify-content: center; */
 }
 
 #social_img {
-  /* width: 100%; */
   width: 100%;
-  /* height: 70%; */
-  /* height: 50%;
-  object-fit: cover;
-  object-position: 0% 90%; */
 }
 
 .post-wrapper {
@@ -322,6 +294,10 @@ h6 {
   -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
   box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+}
+
+.post:hover {
+  transform: scale(1.05);
 }
 
 .thumbnail {
